[project]
name = "mcluster"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx (>=0.31.0,<0.32.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "rdkit (>=2025.9.5,<2026.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "bblean (>=0.10.1,<0.11.0)",
    "mols2grid (>=2.2.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]
